# databaseschema

./: .env.example  .gitignore  Cargo.toml  DATABASE_OPTIMIZATION_COMPLETE.md  Dockerfile  README.md  diesel.toml
.github/workflows/: azure-kubernetes-service-helm.yml  build-push.yml  ci-cd.yml
helm/database-schema/: Chart.yaml  values-prod.yaml  values.yaml
k8s/database-schema-helm/: Chart.yaml  values.yaml
migrations/2024-09-22-151147_create_securities/: down.sql  up.sql
migrations/2024-09-22-151306_create_order_books/: down.sql  up.sql
migrations/2024-09-22-151354_create_open_buy_orders/: down.sql  up.sql
migrations/2024-09-22-151443_create_modified_buy_orders/: down.sql  up.sql
migrations/2024-09-22-151513_create_open_sell_orders/: down.sql
migrations/2024-09-22-151552_create_modified_sell_orders/: down.sql
migrations/2024-12-27-005559_create_exchanges/: down.sql  up.sql
migrations/2024-12-27-005607_create_order_books/: up.sql
migrations/2024-12-27-005814_create_buy_orders/: down.sql  up.sql
migrations/2024-12-27-013047_create_modified_buy_orders/: down.sql  up.sql
migrations/2024-12-27-014212_create_sell_orders/: down.sql  up.sql
migrations/2024-12-27-014607_create_modified_sell_orders/: down.sql  up.sql
migrations/2024-12-27-015136_create_trades/: down.sql  up.sql
migrations/2025-02-08-122653_create_sim_buy_orders/: down.sql  up.sql
migrations/2025-02-08-123323_create_sim_modified_buy_orders/: down.sql  up.sql
migrations/2025-02-08-183744_create_sim_sell_orders/: down.sql  (+1 more)
src/: errors.rs  lib.rs  models.rs  ops.rs  schema.rs
(+73 files in other folders)
